--- a/LiveDex/LiveDex.csproj
+++ b/LiveDex/LiveDex.csproj
@@ -14,6 +14,8 @@
     <PackageReference Include="Newtonsoft.Json" Version="12.0.1" />
     <PackageReference Include="Xam.Plugin.Connectivity" Version="3.2.0" />
     <PackageReference Include="sqlite-net-pcl" Version="1.5.231" />
+    <PackageReference Include="Microsoft.AppCenter.Analytics" Version="1.14.0" />
+    <PackageReference Include="Microsoft.AppCenter.Crashes" Version="1.14.0" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Models\" />
