--- a/LiveDex.Android/LiveDex.Android.csproj
+++ b/LiveDex.Android/LiveDex.Android.csproj
@@ -91,14 +91,13 @@
     <AndroidResource Include="Resources\mipmap-xxhdpi\launcher_foreground.png" />
     <AndroidResource Include="Resources\mipmap-xxxhdpi\icon.png" />
     <AndroidResource Include="Resources\mipmap-xxxhdpi\launcher_foreground.png" />
-    <AndroidResource Include="Resources\drawable-hdpi\pokeball.png" />
     <AndroidResource Include="Resources\drawable-hdpi\bug.png" />
     <AndroidResource Include="Resources\drawable-hdpi\dark.png" />
     <AndroidResource Include="Resources\drawable-hdpi\dragon.png" />
     <AndroidResource Include="Resources\drawable-hdpi\electric.png" />
     <AndroidResource Include="Resources\drawable-hdpi\fairy.png" />
     <AndroidResource Include="Resources\drawable-hdpi\fighting.png" />
-    <AndroidResource Include="Resources\drawable-hdpi\Fire.png" />
+    <AndroidResource Include="Resources\drawable-hdpi\fire.png" />
     <AndroidResource Include="Resources\drawable-hdpi\flying.png" />
     <AndroidResource Include="Resources\drawable-hdpi\ghost.png" />
     <AndroidResource Include="Resources\drawable-hdpi\grass.png" />
@@ -111,6 +110,8 @@
     <AndroidResource Include="Resources\drawable-hdpi\steel.png" />
     <AndroidResource Include="Resources\drawable-hdpi\unknown.png" />
     <AndroidResource Include="Resources\drawable-hdpi\water.png" />
+    <AndroidResource Include="Resources\drawable-hdpi\missing.png" />
+    <AndroidResource Include="Resources\drawable-hdpi\pokeball.png" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Resources\drawable\" />
