--- a/LiveDex.iOS/LiveDex.iOS.csproj
+++ b/LiveDex.iOS/LiveDex.iOS.csproj
@@ -98,48 +98,22 @@
   </ItemGroup>
   <ItemGroup>
     <InterfaceDefinition Include="Resources\LaunchScreen.storyboard" />
-    <ImageAsset Include="Assets.xcassets\AppIcon.appiconset\Contents.json">
-      <Visible>false</Visible>
-    </ImageAsset>
-    <ImageAsset Include="Assets.xcassets\AppIcon.appiconset\Icon1024.png">
-      <Visible>false</Visible>
-    </ImageAsset>
-    <ImageAsset Include="Assets.xcassets\AppIcon.appiconset\Icon180.png">
-      <Visible>false</Visible>
-    </ImageAsset>
-    <ImageAsset Include="Assets.xcassets\AppIcon.appiconset\Icon167.png">
-      <Visible>false</Visible>
-    </ImageAsset>
-    <ImageAsset Include="Assets.xcassets\AppIcon.appiconset\Icon152.png">
-      <Visible>false</Visible>
-    </ImageAsset>
-    <ImageAsset Include="Assets.xcassets\AppIcon.appiconset\Icon120.png">
-      <Visible>false</Visible>
-    </ImageAsset>
-    <ImageAsset Include="Assets.xcassets\AppIcon.appiconset\Icon87.png">
-      <Visible>false</Visible>
-    </ImageAsset>
-    <ImageAsset Include="Assets.xcassets\AppIcon.appiconset\Icon80.png">
-      <Visible>false</Visible>
-    </ImageAsset>
-    <ImageAsset Include="Assets.xcassets\AppIcon.appiconset\Icon76.png">
-      <Visible>false</Visible>
-    </ImageAsset>
-    <ImageAsset Include="Assets.xcassets\AppIcon.appiconset\Icon60.png">
-      <Visible>false</Visible>
-    </ImageAsset>
-    <ImageAsset Include="Assets.xcassets\AppIcon.appiconset\Icon58.png">
-      <Visible>false</Visible>
-    </ImageAsset>
-    <ImageAsset Include="Assets.xcassets\AppIcon.appiconset\Icon40.png">
-      <Visible>false</Visible>
-    </ImageAsset>
-    <ImageAsset Include="Assets.xcassets\AppIcon.appiconset\Icon29.png">
-      <Visible>false</Visible>
-    </ImageAsset>
-    <ImageAsset Include="Assets.xcassets\AppIcon.appiconset\Icon20.png">
-      <Visible>false</Visible>
-    </ImageAsset>
+    <ImageAsset Include="Assets.xcassets\AppIcon.appiconset\Contents.json" />
+    <ImageAsset Include="Assets.xcassets\AppIcon.appiconset\PokeDexAppIcon-03-1024.png" />
+    <ImageAsset Include="Assets.xcassets\AppIcon.appiconset\PokeDexAppIcon-03-20.png" />
+    <ImageAsset Include="Assets.xcassets\AppIcon.appiconset\PokeDexAppIcon-03-20%402x.png" />
+    <ImageAsset Include="Assets.xcassets\AppIcon.appiconset\PokeDexAppIcon-03-20%403x.png" />
+    <ImageAsset Include="Assets.xcassets\AppIcon.appiconset\PokeDexAppIcon-03-29.png" />
+    <ImageAsset Include="Assets.xcassets\AppIcon.appiconset\PokeDexAppIcon-03-29%402x.png" />
+    <ImageAsset Include="Assets.xcassets\AppIcon.appiconset\PokeDexAppIcon-03-29%403x.png" />
+    <ImageAsset Include="Assets.xcassets\AppIcon.appiconset\PokeDexAppIcon-03-40.png" />
+    <ImageAsset Include="Assets.xcassets\AppIcon.appiconset\PokeDexAppIcon-03-40%402x.png" />
+    <ImageAsset Include="Assets.xcassets\AppIcon.appiconset\PokeDexAppIcon-03-40%403x.png" />
+    <ImageAsset Include="Assets.xcassets\AppIcon.appiconset\PokeDexAppIcon-03-60%402x.png" />
+    <ImageAsset Include="Assets.xcassets\AppIcon.appiconset\PokeDexAppIcon-03-60%403x.png" />
+    <ImageAsset Include="Assets.xcassets\AppIcon.appiconset\PokeDexAppIcon-03-76.png" />
+    <ImageAsset Include="Assets.xcassets\AppIcon.appiconset\PokeDexAppIcon-03-76%402x.png" />
+    <ImageAsset Include="Assets.xcassets\AppIcon.appiconset\PokeDexAppIcon-03-83.5%402x.png" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="System" />
