--- a/LiveDex.Android/LiveDex.Android.csproj
+++ b/LiveDex.Android/LiveDex.Android.csproj
@@ -112,6 +112,11 @@
     <AndroidResource Include="Resources\drawable-hdpi\water.png" />
     <AndroidResource Include="Resources\drawable-hdpi\missing.png" />
     <AndroidResource Include="Resources\drawable-hdpi\pokeball.png" />
+    <AndroidResource Include="Resources\mipmap-hdpi\ic_launcher.png" />
+    <AndroidResource Include="Resources\mipmap-mdpi\ic_launcher.png" />
+    <AndroidResource Include="Resources\mipmap-xhdpi\ic_launcher.png" />
+    <AndroidResource Include="Resources\mipmap-xxhdpi\ic_launcher.png" />
+    <AndroidResource Include="Resources\mipmap-xxxhdpi\ic_launcher.png" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Resources\drawable\" />
